# ClonalGrowthSimulator_ABM

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
examples/: con_abm.xml  it_abm.xml  it_abm_docker.xml
init/: HeLa_noclustering_q=56.txt  K562_noclustering_q=56.txt  clonalK562_noclustering_q=56.txt
src/: ABM_v2.cpp  Cell.cpp  Cell.h  Experiment.cpp  Experiment.h  ExperimentConstantGrowth.cpp  ExperimentConstantGrowth.h  ExperimentIteratedGrowth.cpp  ExperimentIteratedGrowth.h  GrowthModel.cpp  GrowthModel.h  SimulationBuilder.cpp  SimulationBuilder.h  main.cpp  tinyxml2.cpp  tinyxml2.h
